--- a/game/index.html
+++ b/game/index.html
@@ -16,36 +16,6 @@
         <p id="result">You are Wrong/Right</p>
         <p id="score"> Score:10</p>
     </div>
+    <script src="script.js"></script>
 </body>
-<script>
-    //selecting box, paragrah
-    var guessnumber=document.getElementById("guessnum")
-    var result=document.getElementById("result")
-    var score=document.getElementById("score")
-    var randomNumber=Math.floor(Math.random()*10)+1
-
-    //score
-    var totalscore=10
-    function check()
-    {
-        var enterednumber = guessnum.value
-        if(randomNumber==enterednumber)
-        {
-           result.textContent="Right"
-           alert("YOU WON!!! ")
-        }
-        else{
-            totalscore=totalscore-1
-            score.textContent="score:"+totalscore
-            result.textContent="Wrong"
-            if( totalscore==0){
-                alert("YOU LOOSE!!! Try Again...")
-            }
-            
-        }
-
-       
-    }
-
-</script>
 </html>
